...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/path_top_container" />

    <TextView
        android:id="@+id/numLocations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="28dp"
        android:fontFamily="sans-serif-black"
        android:text="---"
...
        android:background="?attr/tintColor"
        android:spinnersShown="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/date_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:layout_marginTop="360dp"
        android:layout_marginEnd="8dp"
        android:background="#FE947F"
...
