<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_covid"
        android:icon="@drawable/ic_map_orange_icon"
        android:title="Covid Map" />
    <item
        android:id="@+id/navigation_testing"
        android:icon="@drawable/maps_icon"
        android:title="Testing Map" />
    <item
        android:id="@+id/navigation_path"
        android:icon="@drawable/path_icon"
        android:title="@string/title_path" />
    <item
        android:id="@+id/navigation_news"
        android:icon="@drawable/ic_news_orange_icon"
        android:title="@string/title_news" />
    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings_icon"
        android:title="Settings" />

</menu>