<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsFragment"
    android:background="?attr/backgroundColor">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical" >
            <TextView
                android:id="@+id/text_notifications"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="sans-serif-medium"
                android:text="Settings"
                android:textAlignment="center"
                android:textColor="#ff9984"
                android:textSize="30sp"/>
            <Switch
                android:id="@+id/switch1"
                android:layout_width="391dp"
                android:layout_height="44dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="sans-serif"
                android:onClick="statusCheck"
                android:switchMinWidth="56dp"
                android:switchPadding="120dp"
                android:text="Allow location services"
                android:textColor="?attr/textColor"
                android:textSize="18dp" />

            <Switch
                android:id="@+id/switch2"
                android:layout_width="391dp"
                android:layout_height="44dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="sans-serif"
                android:onClick="notiStautsCheck"
                android:switchMinWidth="56dp"
                android:switchPadding="120dp"
                android:text="Allow notification services"
                android:textColor="?attr/textColor"
                android:textSize="18dp"/>
            <Switch
                android:id="@+id/switch3"
                android:layout_width="391dp"
                android:layout_height="44dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="sans-serif"
                android:onClick="darkModeOn"
                android:switchMinWidth="56dp"
                android:switchPadding="120dp"
                android:text="Dark mode"
                android:textColor="?attr/textColor"
                android:textSize="18dp"/>
            <TextView
                android:id="@+id/textView2"
                android:layout_width="385dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="4dp"
                android:text="Travel Path Data"
                android:textAlignment="viewStart"
                android:textColor="?attr/colorPrimary"
                android:textSize="24sp" />
            <TextView
                android:id="@+id/travelPathDataDescription"
                android:layout_width="385dp"
                android:layout_height="70dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="10dp"
                android:text="One of the app's core feature is to store your travel path across multiple days. If you feel uncomfortable with this data being stored, you can delete your travel path"
                android:textColor="?attr/textColor"
                android:textSize="14sp"/>

            <Button
                android:id="@+id/settings_button"
                android:layout_width="381dp"
                android:layout_height="66dp"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="12dp"
                android:backgroundTint="?attr/buttonColor"
                android:onClick="deletePath"
                android:text="@string/button_text"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/selectDaysText"
                android:layout_width="200dp"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:text="Select number of days you want to retain travel path data"
                android:textColor="?attr/textColor"
                android:textSize="14sp"/>

            <Button
                android:id="@+id/setRetention"
                android:layout_width="69dp"
                android:layout_height="wrap_content"
                android:text="Set"
                android:textColor="#FFFFFF"
                android:translationX="70dp"
                android:onClick="setRet"/>

            <NumberPicker
                android:id="@+id/numberPicker"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_marginStart="320dp"
                android:layout_marginTop="-70dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:descendantFocusability="blocksDescendants"
                android:translationY="-20dp" />

            <TextView
                android:id="@+id/deleteTravelPathDate"
                android:layout_width="385dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="Delete Travel Path of Select Date"
                android:textAlignment="viewStart"
                android:textColor="?attr/colorPrimary"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/deleteDate"
                android:layout_width="385dp"
                android:layout_height="24dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:text="Delete your path data from a select date"
                android:textColor="?attr/textColor"
                android:textSize="14sp" />

            <DatePicker
                android:id="@+id/deleteDatePicker"
                android:layout_width="240dp"
                android:layout_height="140dp"
                android:layout_marginStart="80dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="20dp"
                android:layout_marginEnd="20dp"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"
                android:background="?attr/tintColor"
                android:spinnersShown="true"/>

            <Button
                android:id="@+id/deleteDayPathButton"
                android:layout_width="381dp"
                android:layout_height="66dp"
                android:layout_marginStart="8dp"
                android:backgroundTint="?attr/buttonColor"
                android:onClick="setDeleteDate"
                android:text="Delete Day Travel Path"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="385dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="Test Notfication"
                android:textAlignment="viewStart"
                android:textColor="?attr/colorPrimary"
                android:textSize="24sp"/>
            <TextView
                android:id="@+id/textView4"
                android:layout_width="385dp"
                android:layout_height="70dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:text="The app will send you notifications with relevant Covid-19 information and other important information if you allow it. You can test this feature by sending a test notification"
                android:textColor="?attr/textColor"
                android:textSize="14sp" />

            <Button
                android:id="@+id/test_notification_button"
                android:layout_width="383dp"
                android:layout_height="72dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:backgroundTint="?attr/buttonColor"
                android:onClick="sendTestNotification"
                android:text="Send Test Notification"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/textView5"
                android:layout_width="385dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:text="App Storage"
                android:textAlignment="viewStart"
                android:textColor="#ff9984"
                android:textSize="24sp"/>
            <TextView
                android:id="@+id/storageText"
                android:layout_width="385dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="10dp"
                android:text="-------------"
                android:textColor="?attr/textColor"
                android:textSize="14sp" />

            <Button
                android:id="@+id/delete_storage_button"
                android:layout_width="180dp"
                android:layout_height="72dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="?attr/buttonColor"
                android:onClick="deleteStorage"
                android:text="Delete Storage"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/show_storage_button"
                android:layout_width="180dp"
                android:layout_height="72dp"
                android:layout_marginStart="210dp"
                android:layout_marginTop="-88dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="?attr/buttonColor"
                android:onClick="showStorage"
                android:text="Show Storage"
                android:textColor="@color/white" />
            <Button
                android:id="@+id/about_button"
                android:layout_width="84dp"
                android:layout_height="47dp"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="300dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="80dp"
                android:backgroundTint="?attr/buttonColor"
                android:onClick="showAbout"
                android:text="About"
                android:textColor="@color/white" />

        </LinearLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>