<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewsFragment"
    android:background="?attr/backgroundColor">

    <TextView
        android:id="@+id/weather_text"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:gravity="center"
        android:textColor="?attr/textColor"/>

<!--    android:text="Please enable your internet for weather and news."-->

    <ScrollView
        android:id="@+id/tweet_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="696dp"
        android:translationY="35dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/tweet_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/no_internet" />
        </LinearLayout>
    </ScrollView>

</FrameLayout>